--- a/README
+++ b/README
@@ -1,4 +1,13 @@
-README for Querylet-Output-Text
 
-This distribution provides a plugin to output Querylet results as plaintext
-tables.
+
+This archive contains the distribution Querylet-Output-Text,
+version 0.113:
+
+  output querylet results to text tables
+
+This software is copyright (c) 2004 by Ricardo SIGNES.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
+
+
